edit description in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### Site Settings ###
 title               : Visanu Wanchai
 description         : >-                               # >- means to ignore newlines until "url:"
-                      I compare nearly billions of 
+                      I compare billions of 
                       protein sequences to find meaning 
                       in life and something useful for human health. 
 
