--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ repository          : visanuwan/visanuwan.github.io    # repository metadata on 
 ### Author Info ###
 author:
   name              : Visanu Wanchai
-  image             : https://bit.ly/31jdFG4
+  image             : https://en.gravatar.com/visanuwan
   # behance           : your_username
 # dribbble          : your_username
   email             : visanuw86@gmail.com
