--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ repository          : visanuwan/visanuwan.github.io    # repository metadata on 
 ### Author Info ###
 author:
   name              : Visanu Wanchai
-  image             : https://en.gravatar.com/visanuwan
+  image             : http://1.gravatar.com/avatar/e3e48d6644558da3c68c58894bfe4cd6
   # behance           : your_username
 # dribbble          : your_username
   email             : visanuw86@gmail.com
